deploy: ea8313044a86f00f33f688fb433afacd3ab1b710

--- a/index.html
+++ b/index.html
@@ -200,7 +200,8 @@ I also enjoyed Albert Meyer's explanations and teaching. That's another reason.<
 <h3>You don't go through the problem sets, or the exams.</h3>
 <p>That's correct, and it's intentional.<br>
 Again, the point is to be as short as possible, only to explore concepts, so it mostly just scratches the surface.</p>
-<h2>So, it's normal that <code>${subject}</code> is left out in <code>${section}</code>. There are many things left out.</h2>
+<p>So, it's normal that <code>${subject}</code> is left out in <code>${section}</code>. There are many things left out.</p>
+<hr>
 <h2>Some points on notation:</h2>
 <ul>
 <li>The coursebook and slides use the symbol <eq><span class="katex"><math xmlns="http://www.w3.org/1998/Math/MathML"><semantics><mrow><mo>:</mo><mo>:</mo><mo>=</mo></mrow><annotation encoding="application/x-tex">::=</annotation></semantics></math></span></eq> (as in <eq><span class="katex"><math xmlns="http://www.w3.org/1998/Math/MathML"><semantics><mrow><mi>x</mi><mo>:</mo><mo>:</mo><mo>=</mo><mi>y</mi></mrow><annotation encoding="application/x-tex">x ::= y</annotation></semantics></math></span></eq>, <eq><span class="katex"><math xmlns="http://www.w3.org/1998/Math/MathML"><semantics><mrow><mi>x</mi></mrow><annotation encoding="application/x-tex">x</annotation></semantics></math></span></eq> is assigned to <eq><span class="katex"><math xmlns="http://www.w3.org/1998/Math/MathML"><semantics><mrow><mi>y</mi></mrow><annotation encoding="application/x-tex">y</annotation></semantics></math></span></eq>). I used <eq><span class="katex"><math xmlns="http://www.w3.org/1998/Math/MathML"><semantics><mrow><mo>=</mo></mrow><annotation encoding="application/x-tex">=</annotation></semantics></math></span></eq> (the equal sign) for this.</li>
