deploy: 744f198348c16585bf57eff8df2e8dc376b535fe

--- a/unit-01-proofs/quantifiers-and-predicate-logic/index.html
+++ b/unit-01-proofs/quantifiers-and-predicate-logic/index.html
@@ -28,126 +28,126 @@
       <details>
         <summary>Table of Contents</summary>
           <p>
-            <a href="/">Introduction</a>
+            <a href="/bite-sized-math-for-cs/">Introduction</a>
           </p>
           <p>
-            <a href="/prerequisites-and-resources/">Prerequisites &amp; Resources</a>
+            <a href="/bite-sized-math-for-cs/prerequisites-and-resources/">Prerequisites &amp; Resources</a>
           </p>
         <div>
           <p class="unit">Unit 1: Proofs</p>
             <p>
-              <a href="/unit-01-proofs/introduction-to-proofs/">00. Introduction to Proofs</a>
+              <a href="/bite-sized-math-for-cs/unit-01-proofs/introduction-to-proofs/">00. Introduction to Proofs</a>
             </p>
             <p>
-              <a href="/unit-01-proofs/two-proof-methods/">01. (Two) Proof Methods</a>
+              <a href="/bite-sized-math-for-cs/unit-01-proofs/two-proof-methods/">01. (Two) Proof Methods</a>
             </p>
             <p>
-              <a href="/unit-01-proofs/the-well-ordering-principle/">02. The Well Ordering Principle</a>
+              <a href="/bite-sized-math-for-cs/unit-01-proofs/the-well-ordering-principle/">02. The Well Ordering Principle</a>
             </p>
             <p>
-              <a href="/unit-01-proofs/logic-and-propositions/">03. Logic &amp; Propositions</a>
+              <a href="/bite-sized-math-for-cs/unit-01-proofs/logic-and-propositions/">03. Logic &amp; Propositions</a>
             </p>
             <p class="active-page-link">
-              <a href="/unit-01-proofs/quantifiers-and-predicate-logic/">04. Quantifiers and Predicate Logic</a>
+              <a href="/bite-sized-math-for-cs/unit-01-proofs/quantifiers-and-predicate-logic/">04. Quantifiers and Predicate Logic</a>
             </p>
             <p>
-              <a href="/unit-01-proofs/sets/">05. Sets</a>
+              <a href="/bite-sized-math-for-cs/unit-01-proofs/sets/">05. Sets</a>
             </p>
             <p>
-              <a href="/unit-01-proofs/binary-relations/">06. Binary Relations</a>
+              <a href="/bite-sized-math-for-cs/unit-01-proofs/binary-relations/">06. Binary Relations</a>
             </p>
             <p>
-              <a href="/unit-01-proofs/induction/">07. Induction</a>
+              <a href="/bite-sized-math-for-cs/unit-01-proofs/induction/">07. Induction</a>
             </p>
             <p>
-              <a href="/unit-01-proofs/state-machines-invariants/">08. State Machines — Invariants</a>
+              <a href="/bite-sized-math-for-cs/unit-01-proofs/state-machines-invariants/">08. State Machines — Invariants</a>
             </p>
             <p>
-              <a href="/unit-01-proofs/recursive-definitions/">09. Recursive Definitions</a>
+              <a href="/bite-sized-math-for-cs/unit-01-proofs/recursive-definitions/">09. Recursive Definitions</a>
             </p>
             <p>
-              <a href="/unit-01-proofs/infinite-sets/">10. Infinite Sets</a>
+              <a href="/bite-sized-math-for-cs/unit-01-proofs/infinite-sets/">10. Infinite Sets</a>
             </p>
         </div>
         <div>
           <p class="unit">Unit 2: Structures</p>
             <p>
-              <a href="/unit-02-structures/gcds/">11. GCDs</a>
+              <a href="/bite-sized-math-for-cs/unit-02-structures/gcds/">11. GCDs</a>
             </p>
             <p>
-              <a href="/unit-02-structures/congruences/">12. Congruences</a>
+              <a href="/bite-sized-math-for-cs/unit-02-structures/congruences/">12. Congruences</a>
             </p>
             <p>
-              <a href="/unit-02-structures/eulers-theorem/">13. Euler&#39;s Theorem</a>
+              <a href="/bite-sized-math-for-cs/unit-02-structures/eulers-theorem/">13. Euler&#39;s Theorem</a>
             </p>
             <p>
-              <a href="/unit-02-structures/rsa-encryption/">14. RSA Encryption</a>
+              <a href="/bite-sized-math-for-cs/unit-02-structures/rsa-encryption/">14. RSA Encryption</a>
             </p>
             <p>
-              <a href="/unit-02-structures/digraphs-walks-and-paths/">15. Digraphs: Walks and Paths</a>
+              <a href="/bite-sized-math-for-cs/unit-02-structures/digraphs-walks-and-paths/">15. Digraphs: Walks and Paths</a>
             </p>
             <p>
-              <a href="/unit-02-structures/directed-acyclic-graphs/">16. Directed Acyclic Graphs</a>
+              <a href="/bite-sized-math-for-cs/unit-02-structures/directed-acyclic-graphs/">16. Directed Acyclic Graphs</a>
             </p>
             <p>
-              <a href="/unit-02-structures/partial-orders-and-equivalence/">17. Partial Orders and Equivalence</a>
+              <a href="/bite-sized-math-for-cs/unit-02-structures/partial-orders-and-equivalence/">17. Partial Orders and Equivalence</a>
             </p>
             <p>
-              <a href="/unit-02-structures/degrees-and-isomorphism/">18. Degrees &amp; Isomorphism</a>
+              <a href="/bite-sized-math-for-cs/unit-02-structures/degrees-and-isomorphism/">18. Degrees &amp; Isomorphism</a>
             </p>
             <p>
-              <a href="/unit-02-structures/coloring-and-connectivity/">19. Coloring &amp; Connectivity</a>
+              <a href="/bite-sized-math-for-cs/unit-02-structures/coloring-and-connectivity/">19. Coloring &amp; Connectivity</a>
             </p>
             <p>
-              <a href="/unit-02-structures/trees/">20. Trees</a>
+              <a href="/bite-sized-math-for-cs/unit-02-structures/trees/">20. Trees</a>
             </p>
             <p>
-              <a href="/unit-02-structures/stable-matching/">21. Stable Matching</a>
+              <a href="/bite-sized-math-for-cs/unit-02-structures/stable-matching/">21. Stable Matching</a>
             </p>
         </div>
         <div>
           <p class="unit">Unit 3: Counting</p>
             <p>
-              <a href="/unit-03-counting/sums-and-products/">22. Sums &amp; Products</a>
+              <a href="/bite-sized-math-for-cs/unit-03-counting/sums-and-products/">22. Sums &amp; Products</a>
             </p>
             <p>
-              <a href="/unit-03-counting/asymptotics/">23. Asymptotics</a>
+              <a href="/bite-sized-math-for-cs/unit-03-counting/asymptotics/">23. Asymptotics</a>
             </p>
             <p>
-              <a href="/unit-03-counting/counting-with-bijections/">24. Counting with Bijections</a>
+              <a href="/bite-sized-math-for-cs/unit-03-counting/counting-with-bijections/">24. Counting with Bijections</a>
             </p>
             <p>
-              <a href="/unit-03-counting/repetitions-and-binomial-theorem/">25. Repetitions &amp; Binomial Theorem</a>
+              <a href="/bite-sized-math-for-cs/unit-03-counting/repetitions-and-binomial-theorem/">25. Repetitions &amp; Binomial Theorem</a>
             </p>
             <p>
-              <a href="/unit-03-counting/pigeonhole-principle-inclusion-exclusion/">26. Pigeonhole Principle, Inclusion-Exclusion</a>
+              <a href="/bite-sized-math-for-cs/unit-03-counting/pigeonhole-principle-inclusion-exclusion/">26. Pigeonhole Principle, Inclusion-Exclusion</a>
             </p>
         </div>
         <div>
           <p class="unit">Unit 4: Probability</p>
             <p>
-              <a href="/unit-04-probability/intro-to-discrete-probability/">27. Intro to Discrete Probability</a>
+              <a href="/bite-sized-math-for-cs/unit-04-probability/intro-to-discrete-probability/">27. Intro to Discrete Probability</a>
             </p>
             <p>
-              <a href="/unit-04-probability/conditional-probability/">28. Conditional Probability</a>
+              <a href="/bite-sized-math-for-cs/unit-04-probability/conditional-probability/">28. Conditional Probability</a>
             </p>
             <p>
-              <a href="/unit-04-probability/independence-and-causality/">29. Independence &amp; Causality</a>
+              <a href="/bite-sized-math-for-cs/unit-04-probability/independence-and-causality/">29. Independence &amp; Causality</a>
             </p>
             <p>
-              <a href="/unit-04-probability/random-variables-density-functions/">30. Random Variables, Density Functions</a>
+              <a href="/bite-sized-math-for-cs/unit-04-probability/random-variables-density-functions/">30. Random Variables, Density Functions</a>
             </p>
             <p>
-              <a href="/unit-04-probability/expectation/">31. Expectation</a>
+              <a href="/bite-sized-math-for-cs/unit-04-probability/expectation/">31. Expectation</a>
             </p>
             <p>
-              <a href="/unit-04-probability/deviation-markov-and-chebyshev-bounds/">32. Deviation: Markov &amp; Chebyshev Bounds</a>
+              <a href="/bite-sized-math-for-cs/unit-04-probability/deviation-markov-and-chebyshev-bounds/">32. Deviation: Markov &amp; Chebyshev Bounds</a>
             </p>
             <p>
-              <a href="/unit-04-probability/sampling-and-confidence/">33. Sampling &amp; Confidence</a>
+              <a href="/bite-sized-math-for-cs/unit-04-probability/sampling-and-confidence/">33. Sampling &amp; Confidence</a>
             </p>
             <p>
-              <a href="/unit-04-probability/random-walks-and-pagerank/">34. Random Walks &amp; PageRank</a>
+              <a href="/bite-sized-math-for-cs/unit-04-probability/random-walks-and-pagerank/">34. Random Walks &amp; PageRank</a>
             </p>
         </div>
       </details>
@@ -192,7 +192,7 @@ They also mean the same thing.</p>
 <p>Now, it says what we mean it to say, &quot;not everything that glitters is gold.&quot;</p>
 
       <hr class="ending">
-          <ul class="links-nextprev"><li><a href="/unit-01-proofs/logic-and-propositions/">previous</a></li><li><a href="/unit-01-proofs/sets/">next</a></li>
+          <ul class="links-nextprev"><li><a href="/bite-sized-math-for-cs/unit-01-proofs/logic-and-propositions/">previous</a></li><li><a href="/bite-sized-math-for-cs/unit-01-proofs/sets/">next</a></li>
           </ul> 
       </div>
     </main>
