deploy: a9b308022b0c491c768a0394593de727dae674eb

--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
     <link rel="icon" type="image/png" sizes="16x16" href=/bite-sized-math-for-cs/public/favicon-16x16.png>
     <link rel="manifest" href=/bite-sized-math-for-cs/public/site.webmanifest>
     <link rel="stylesheet" href=/bite-sized-math-for-cs/public/css/index.css>
-    <link href="/public/css/prism-material-light.css" rel="stylesheet">
+    <link href=/bite-sized-math-for-cs/public/css/prism-material-light.css rel="stylesheet">
     <title>Bite-Sized Mathematics for Computer Science</title>
   </head>
   <body>
@@ -182,7 +182,7 @@
 <p>This collection as a whole will probably make the most sense as a very short and informal supplement to the course, especially if you don't have a mathematical background but still want to browse the material.</p>
 </li>
 <li>
-<p>Still, <strong>there are some prerequisites</strong>. It is assumed you have studied a bit of math before. The course itself <a href="https://openlearninglibrary.mit.edu/courses/course-v1:OCW+6.042J+2T2019/courseware/30a3227b34eb4b2b8f1df191e7632f79/82b828ab487a4cd08a4357743d121e79/?activate_block_id=block-v1%3AOCW%2B6.042J%2B2T2019%2Btype%40sequential%2Bblock%4082b828ab487a4cd08a4357743d121e79">requires background</a> on Single Variable Calculus, and <em>familiarity with sequences and series, limits, and differentiation and integration of functions of one variable</em>. I provided some resources that I found helpful in the <a href="/prerequisites-and-resources">Prerequisites &amp; Resources</a> section, but here is the thing: a lack of background knowledge shouldn't deter you; quite the opposite, that means there's still a lot more opportunity to learn. That's a good thing. I don't think you need to be an expert on these subjects either; since this collection is only to provide familiarity with the concepts, that's okay if you don't know the intricacies of a topic.</p>
+<p>Still, <strong>there are some prerequisites</strong>. It is assumed you have studied a bit of math before. The course itself <a href="https://openlearninglibrary.mit.edu/courses/course-v1:OCW+6.042J+2T2019/courseware/30a3227b34eb4b2b8f1df191e7632f79/82b828ab487a4cd08a4357743d121e79/?activate_block_id=block-v1%3AOCW%2B6.042J%2B2T2019%2Btype%40sequential%2Bblock%4082b828ab487a4cd08a4357743d121e79">requires background</a> on Single Variable Calculus, and <em>familiarity with sequences and series, limits, and differentiation and integration of functions of one variable</em>. I provided some resources that I found helpful in the <a href="bite-sized-math-for-cs/prerequisites-and-resources">Prerequisites &amp; Resources</a> section, but here is the thing: a lack of background knowledge shouldn't deter you; quite the opposite, that means there's still a lot more opportunity to learn. That's a good thing. I don't think you need to be an expert on these subjects either; since this collection is only to provide familiarity with the concepts, that's okay if you don't know the intricacies of a topic.</p>
 </li>
 <li>
 <p>Sometimes, a section only consists of definitions without examples. These are just notes. The point is to keep it as simple and short as possible. Here and there, when there is no example, I provide links to other resources that explain the material at a very basic, introductory level.</p>
@@ -195,7 +195,7 @@
 <p>Because I want to.<br>
 Learning is, admittedly, slow — especially mathematics. But I want to document what I'm learning as I'm doing it; that's the point of <a href="https://www.swyx.io/learn-in-public"><em>learning in public</em></a>.</p>
 <h3>Couldn't you have chosen a simpler resource rather than picking up an MIT course syllabus to &quot;gain familiarity with concepts&quot;?</h3>
-<p>Yes, I could've. There are tons of resources, as I included in the <a href="/prerequisites-and-resources">Prerequisites and Resources</a> page. However, it's easy to get lost in details; 6.042 is structured, and it is a challenge. And it's fun.<br>
+<p>Yes, I could've. There are tons of resources, as I included in the <a href="bite-sized-math-for-cs/prerequisites-and-resources">Prerequisites and Resources</a> page. However, it's easy to get lost in details; 6.042 is structured, and it is a challenge. And it's fun.<br>
 I also enjoyed Albert Meyer's explanations and teaching. That's another reason.</p>
 <h3>You don't go through the problem sets, or the exams.</h3>
 <p>That's correct, and it's intentional.<br>
@@ -205,7 +205,7 @@ Again, the point is to be as short as possible, only to explore concepts, so it 
 <h2>Some points on notation:</h2>
 <ul>
 <li>The coursebook and slides use the symbol <eq><span class="katex"><math xmlns="http://www.w3.org/1998/Math/MathML"><semantics><mrow><mo>:</mo><mo>:</mo><mo>=</mo></mrow><annotation encoding="application/x-tex">::=</annotation></semantics></math></span></eq> (as in <eq><span class="katex"><math xmlns="http://www.w3.org/1998/Math/MathML"><semantics><mrow><mi>x</mi><mo>:</mo><mo>:</mo><mo>=</mo><mi>y</mi></mrow><annotation encoding="application/x-tex">x ::= y</annotation></semantics></math></span></eq>, <eq><span class="katex"><math xmlns="http://www.w3.org/1998/Math/MathML"><semantics><mrow><mi>x</mi></mrow><annotation encoding="application/x-tex">x</annotation></semantics></math></span></eq> is assigned to <eq><span class="katex"><math xmlns="http://www.w3.org/1998/Math/MathML"><semantics><mrow><mi>y</mi></mrow><annotation encoding="application/x-tex">y</annotation></semantics></math></span></eq>). I used <eq><span class="katex"><math xmlns="http://www.w3.org/1998/Math/MathML"><semantics><mrow><mo>=</mo></mrow><annotation encoding="application/x-tex">=</annotation></semantics></math></span></eq> (the equal sign) for this.</li>
-<li>&quot;<strong>iff</strong>&quot; is the biconditional, a shorthand for &quot;if and only if&quot;, you can check out <a href="/unit-01-proofs/logic-and-propositions/">Logic and Propositions</a>, so it is not a grammatical mistake if you've not seen it before.</li>
+<li>&quot;<strong>iff</strong>&quot; is the biconditional, a shorthand for &quot;if and only if&quot;, you can check out <a href="bite-sized-math-for-cs/unit-01-proofs/logic-and-propositions/">Logic and Propositions</a>, so it is not a grammatical mistake if you've not seen it before.</li>
 </ul>
 <hr>
 <p>&quot;<em>Anybody with enough curiosity ought to be able to explore a field</em>.<sup>*</sup>&quot; - Eric Grimson, Chancellor for Academic Advancement at MIT, Professor of Computer Science</p>
