--- a/unit-01-proofs/sets/index.html
+++ b/unit-01-proofs/sets/index.html
@@ -9,7 +9,7 @@
     <link rel="icon" type="image/png" sizes="16x16" href=/bite-sized-math-for-cs/public/favicon-16x16.png>
     <link rel="manifest" href=/bite-sized-math-for-cs/public/site.webmanifest>
     <link rel="stylesheet" href=/bite-sized-math-for-cs/public/css/index.css>
-    <link href="/public/css/prism-material-light.css" rel="stylesheet">
+    <link href=/bite-sized-math-for-cs/public/css/prism-material-light.css rel="stylesheet">
     <title>Sets</title>
   </head>
   <body>
@@ -154,7 +154,7 @@
       <div class="content">
       <h1>Sets</h1>
 <p>There are a lot of things to talk about when it comes to sets.<br>
-Since it is <a href="/prerequisites-and-resources">assumed</a> that you already know about things like union, intersection, etc., we're not going to go over set operations.</p>
+Since it is <a href="bite-sized-math-for-cs/prerequisites-and-resources">assumed</a> that you already know about things like union, intersection, etc., we're not going to go over set operations.</p>
 <p>Some popular sets you might know are:</p>
 <table>
 <thead>
