--- a/unit-01-proofs/the-well-ordering-principle/index.html
+++ b/unit-01-proofs/the-well-ordering-principle/index.html
@@ -9,7 +9,7 @@
     <link rel="icon" type="image/png" sizes="16x16" href=/bite-sized-math-for-cs/public/favicon-16x16.png>
     <link rel="manifest" href=/bite-sized-math-for-cs/public/site.webmanifest>
     <link rel="stylesheet" href=/bite-sized-math-for-cs/public/css/index.css>
-    <link href="/public/css/prism-material-light.css" rel="stylesheet">
+    <link href=/bite-sized-math-for-cs/public/css/prism-material-light.css rel="stylesheet">
     <title>The Well Ordering Principle</title>
   </head>
   <body>
@@ -158,7 +158,7 @@
 <p>Every nonempty set of nonnegative integers has a <em>smallest</em> element.</p>
 </blockquote>
 <p>Yes, it looks like a grammatical mistake, but it isn't here. Let's see.</p>
-<p>When we proved <a href="/unit-01-proofs/two-proof-methods">that <eq><span class="katex"><math xmlns="http://www.w3.org/1998/Math/MathML"><semantics><mrow><msqrt><mn>2</mn></msqrt></mrow><annotation encoding="application/x-tex">\sqrt{2}</annotation></semantics></math></span></eq> is irrational</a>, we actually have taken this principle for granted, we assumed that <eq><span class="katex"><math xmlns="http://www.w3.org/1998/Math/MathML"><semantics><mrow><mfrac><mi>a</mi><mi>b</mi></mfrac></mrow><annotation encoding="application/x-tex">\frac{a}{b}</annotation></semantics></math></span></eq> can be written in the <em>lowest terms</em>.</p>
+<p>When we proved <a href="bite-sized-math-for-cs/unit-01-proofs/two-proof-methods">that <eq><span class="katex"><math xmlns="http://www.w3.org/1998/Math/MathML"><semantics><mrow><msqrt><mn>2</mn></msqrt></mrow><annotation encoding="application/x-tex">\sqrt{2}</annotation></semantics></math></span></eq> is irrational</a>, we actually have taken this principle for granted, we assumed that <eq><span class="katex"><math xmlns="http://www.w3.org/1998/Math/MathML"><semantics><mrow><mfrac><mi>a</mi><mi>b</mi></mfrac></mrow><annotation encoding="application/x-tex">\frac{a}{b}</annotation></semantics></math></span></eq> can be written in the <em>lowest terms</em>.</p>
 <p>We also have taken advantage of the <em>Prime Factorization Theorem</em> in the proof mentioned above, so let's use Well Ordering Principle to prove it.</p>
 <p>Remember, the Prime Factorization Theorem states that <em>every positive integer greater than <eq><span class="katex"><math xmlns="http://www.w3.org/1998/Math/MathML"><semantics><mrow><mn>1</mn></mrow><annotation encoding="application/x-tex">1</annotation></semantics></math></span></eq> can be factored as a product of primes</em>.</p>
 <table>
