--- a/unit-02-structures/partial-orders-and-equivalence/index.html
+++ b/unit-02-structures/partial-orders-and-equivalence/index.html
@@ -9,7 +9,7 @@
     <link rel="icon" type="image/png" sizes="16x16" href=/bite-sized-math-for-cs/public/favicon-16x16.png>
     <link rel="manifest" href=/bite-sized-math-for-cs/public/site.webmanifest>
     <link rel="stylesheet" href=/bite-sized-math-for-cs/public/css/index.css>
-    <link href="/public/css/prism-material-light.css" rel="stylesheet">
+    <link href=/bite-sized-math-for-cs/public/css/prism-material-light.css rel="stylesheet">
     <title>Partial Orders and Equivalence</title>
   </head>
   <body>
@@ -297,7 +297,7 @@ Since <eq><span class="katex"><math xmlns="http://www.w3.org/1998/Math/MathML"><
 <blockquote>
 <p>The <em>equivalence classes</em> of an equivalence relation on a set <eq><span class="katex"><math xmlns="http://www.w3.org/1998/Math/MathML"><semantics><mrow><mi>A</mi></mrow><annotation encoding="application/x-tex">A</annotation></semantics></math></span></eq> are the blocks of a partition of <eq><span class="katex"><math xmlns="http://www.w3.org/1998/Math/MathML"><semantics><mrow><mi>A</mi></mrow><annotation encoding="application/x-tex">A</annotation></semantics></math></span></eq>.</p>
 </blockquote>
-<p><em>Note: We mentioned <strong>partition</strong> briefly in the <a href="/unit-02-structures/directed-acyclic-graphs/">previous section</a>.</em></p>
+<p><em>Note: We mentioned <strong>partition</strong> briefly in the <a href="bite-sized-math-for-cs/unit-02-structures/directed-acyclic-graphs/">previous section</a>.</em></p>
 <hr>
 <p>Graphs with the same connections are called <mark>isomorphic</mark>.<br>
 When there is an <em>edge-preserving bijection</em> between two graphs, it means that they are isomorphic.</p>
