--- a/unit-02-structures/trees/index.html
+++ b/unit-02-structures/trees/index.html
@@ -9,7 +9,7 @@
     <link rel="icon" type="image/png" sizes="16x16" href=/bite-sized-math-for-cs/public/favicon-16x16.png>
     <link rel="manifest" href=/bite-sized-math-for-cs/public/site.webmanifest>
     <link rel="stylesheet" href=/bite-sized-math-for-cs/public/css/index.css>
-    <link href="/public/css/prism-material-light.css" rel="stylesheet">
+    <link href=/bite-sized-math-for-cs/public/css/prism-material-light.css rel="stylesheet">
     <title>Trees</title>
   </head>
   <body>
@@ -158,7 +158,7 @@
 A <mark>tree</mark> is a connected acyclic graph.</p>
 <p>Nodes with degrees of <eq><span class="katex"><math xmlns="http://www.w3.org/1998/Math/MathML"><semantics><mrow><mn>1</mn></mrow><annotation encoding="application/x-tex">1</annotation></semantics></math></span></eq> are called the <mark>leaves</mark>.</p>
 <p>Here is one example:</p>
-<p><img src="https://upload.wikimedia.org/wikipedia/commons/thumb/d/d3/Graph_theory_tree.svg/217px-Graph_theory_tree.svg.png" alt=""></p>
+<p><img src="https://upload.wikimedia.org/wikipedia/commons/thumb/d/d3/Graph_theory_tree.svg/217px-Graph_theory_tree.svg.png" alt="Tree example"></p>
 <p><em>Note: This section assumes some familiarity with terminology like the root node, parent node, child node, etc.</em></p>
 <hr>
 <p>Let's look at some properties of trees:</p>
