--- a/unit-04-probability/intro-to-discrete-probability/index.html
+++ b/unit-04-probability/intro-to-discrete-probability/index.html
@@ -9,7 +9,7 @@
     <link rel="icon" type="image/png" sizes="16x16" href=/bite-sized-math-for-cs/public/favicon-16x16.png>
     <link rel="manifest" href=/bite-sized-math-for-cs/public/site.webmanifest>
     <link rel="stylesheet" href=/bite-sized-math-for-cs/public/css/index.css>
-    <link href="/public/css/prism-material-light.css" rel="stylesheet">
+    <link href=/bite-sized-math-for-cs/public/css/prism-material-light.css rel="stylesheet">
     <title>Intro to Discrete Probability</title>
   </head>
   <body>
@@ -241,7 +241,7 @@ In this case, an outcome is <em>a pair of colors</em>.</p>
 </table>
 <p><em><strong>The final step</strong></em> is to compute the event probabilities to find the probability that he chooses shoes and socks of the same color.<br>
 In order to do that, let's look at the <mark>probability tree</mark> that is constructed:</p>
-<img src="../images/probabilitytree.png" alt="Probability tree" width="50%">
+<img src=../images/probabilitytree.png alt="Probability tree" width="50%">
 <p style="font-size: smaller; margin-top: 0;"><i>From <a href="https://openlearninglibrary.mit.edu/assets/courseware/v1/ae07e9bd124c922847eaf485bffd634e/asset-v1:OCW+6.042J+2T2019+type@asset+block/6.042J_Unit_IV_4.1_Q4.jpg">Q4 Explanation</a>.</i></p>
 <p>Now that we see the probability of choosing black shoes and black socks is <eq><span class="katex"><math xmlns="http://www.w3.org/1998/Math/MathML"><semantics><mrow><mfrac><mn>12</mn><mn>65</mn></mfrac></mrow><annotation encoding="application/x-tex">\frac{12}{65}</annotation></semantics></math></span></eq> and the probability of choosing brown shoes and brown socks is <eq><span class="katex"><math xmlns="http://www.w3.org/1998/Math/MathML"><semantics><mrow><mfrac><mn>12</mn><mn>65</mn></mfrac></mrow><annotation encoding="application/x-tex">\frac{12}{65}</annotation></semantics></math></span></eq>, we can sum the outcomes to find what we're looking for: <eq><span class="katex"><math xmlns="http://www.w3.org/1998/Math/MathML"><semantics><mrow><mfrac><mn>12</mn><mn>65</mn></mfrac><mo>+</mo><mfrac><mn>12</mn><mn>65</mn></mfrac><mo>=</mo><mfrac><mn>24</mn><mn>65</mn></mfrac></mrow><annotation encoding="application/x-tex">\frac{12}{65} + \frac{12}{65} = \frac{24}{65}</annotation></semantics></math></span></eq>.<br>
 So, the probability of choosing the same color of shoes and socks is <eq><span class="katex"><math xmlns="http://www.w3.org/1998/Math/MathML"><semantics><mrow><mfrac><mn>24</mn><mn>65</mn></mfrac><mo>=</mo><mn>0.3692</mn></mrow><annotation encoding="application/x-tex">\frac{24}{65} = 0.3692</annotation></semantics></math></span></eq>.</p>
@@ -296,7 +296,7 @@ Then, the probability of any one of them occurring is <eq><span class="katex"><m
 <td style="text-align:left"><section><eqn><span class="katex"><math xmlns="http://www.w3.org/1998/Math/MathML" display="block"><semantics><mrow><mtext>Pr</mtext><mo stretchy="false">[</mo><mi>A</mi><mo>∪</mo><mi>B</mi><mo stretchy="false">]</mo><mo>=</mo><mtext>Pr</mtext><mo stretchy="false">[</mo><mi>A</mi><mo stretchy="false">]</mo><mo>+</mo><mtext>Pr</mtext><mo stretchy="false">[</mo><mi>B</mi><mo stretchy="false">]</mo><mo>−</mo><mtext>Pr</mtext><mo stretchy="false">[</mo><mi>A</mi><mo>∩</mo><mi>B</mi><mo stretchy="false">]</mo></mrow><annotation encoding="application/x-tex">\text{Pr}[A \cup B] = \text{Pr}[A] + \text{Pr}[B] - \text{Pr}[A \cap B]</annotation></semantics></math></span></eqn></section></td>
 </tr>
 <tr>
-<td style="text-align:left">This is similar to what we have seen in <a href="/unit-03-counting/pigeonhole-principle-inclusion-exclusion/">this section</a>.</td>
+<td style="text-align:left">This is similar to what we have seen in <a href="bite-sized-math-for-cs/unit-03-counting/pigeonhole-principle-inclusion-exclusion/">this section</a>.</td>
 </tr>
 </tbody>
 </table>
