--- a/unit-01-proofs/induction/index.html
+++ b/unit-01-proofs/induction/index.html
@@ -9,7 +9,7 @@
     <link rel="icon" type="image/png" sizes="16x16" href=/bite-sized-math-for-cs/public/favicon-16x16.png>
     <link rel="manifest" href=/bite-sized-math-for-cs/public/site.webmanifest>
     <link rel="stylesheet" href=/bite-sized-math-for-cs/public/css/index.css>
-    <link href="/public/css/prism-material-light.css" rel="stylesheet">
+    <link href=/bite-sized-math-for-cs/public/css/prism-material-light.css rel="stylesheet">
     <title>Induction</title>
   </head>
   <body>
@@ -169,7 +169,7 @@
 ^--^---'--^    `-'`---^
  0   1   2      3    4
 </code></pre>
-<p style="font-size: 14px;"><i>ASCII art from https://www.asciiart.eu/books/books</i></p>
+<p style="font-size: smaller;"><i>ASCII art from https://www.asciiart.eu/books/books</i></p>
 <p>Looking at the books from left to right, we state two rules for ourselves:</p>
 <ol>
 <li>We are going to read the first book.</li>
