--- a/unit-02-structures/directed-acyclic-graphs/index.html
+++ b/unit-02-structures/directed-acyclic-graphs/index.html
@@ -9,7 +9,7 @@
     <link rel="icon" type="image/png" sizes="16x16" href=/bite-sized-math-for-cs/public/favicon-16x16.png>
     <link rel="manifest" href=/bite-sized-math-for-cs/public/site.webmanifest>
     <link rel="stylesheet" href=/bite-sized-math-for-cs/public/css/index.css>
-    <link href="/public/css/prism-material-light.css" rel="stylesheet">
+    <link href=/bite-sized-math-for-cs/public/css/prism-material-light.css rel="stylesheet">
     <title>Directed Acyclic Graphs</title>
   </head>
   <body>
@@ -192,7 +192,7 @@
 <section><eqn><span class="katex"><math xmlns="http://www.w3.org/1998/Math/MathML" display="block"><semantics><mrow><mi>n</mi><mo>≥</mo><mi>c</mi><mo>⋅</mo><mi>a</mi></mrow><annotation encoding="application/x-tex">n \geq c \cdot a</annotation></semantics></math></span></eqn></section><p>This is <a href="https://mathworld.wolfram.com/DilworthsLemma.html">Dilworth's lemma</a>.</p>
 <p>To help visualize it better in our mind's eye, it'd be good to know that the size of the longest chain is called the <a href="https://mathworld.wolfram.com/PartialOrderLength.html">length</a>, and the size of the longest antichain the <a href="https://mathworld.wolfram.com/PartialOrderWidth.html">width</a>.</p>
 <p>Then, this image taken from the slides of the lecture would make more sense:</p>
-<img src="../images/antichains-chains.png" alt="Antichains times chains" width="50%">
+<img src=../images/antichains-chains.png alt="Antichains times chains" width="50%">
 <hr>
 <p>A <mark>partition</mark> of a set <eq><span class="katex"><math xmlns="http://www.w3.org/1998/Math/MathML"><semantics><mrow><mi>A</mi></mrow><annotation encoding="application/x-tex">A</annotation></semantics></math></span></eq> is a set of nonempty subsets of <eq><span class="katex"><math xmlns="http://www.w3.org/1998/Math/MathML"><semantics><mrow><mi>A</mi></mrow><annotation encoding="application/x-tex">A</annotation></semantics></math></span></eq> such that every element of <eq><span class="katex"><math xmlns="http://www.w3.org/1998/Math/MathML"><semantics><mrow><mi>A</mi></mrow><annotation encoding="application/x-tex">A</annotation></semantics></math></span></eq> is in exactly one of them. These nonempty subsets are called <mark>blocks</mark> of the partition.</p>
 <p>So, every element of <eq><span class="katex"><math xmlns="http://www.w3.org/1998/Math/MathML"><semantics><mrow><mi>A</mi></mrow><annotation encoding="application/x-tex">A</annotation></semantics></math></span></eq> has to be in exactly one block.</p>
