deploy: ad8a45ab65ed76c2070d41aac1cd76692d5f4cc4

--- a/index.html
+++ b/index.html
@@ -209,7 +209,7 @@ Again, the point is to be as short as possible, only to explore concepts, so it 
 </ul>
 <hr>
 <p>&quot;<em>Anybody with enough curiosity ought to be able to explore a field</em>.<sup>*</sup>&quot; - Eric Grimson, Chancellor for Academic Advancement at MIT, Professor of Computer Science</p>
-<p><sup>*</sup><span style="font-size: 18px;">From <a href="https://chalk-radio.simplecast.com/episodes/opening-computer-science-to-everyone-with-chancellor-eric-grimson-Bpcx1tMI">MIT's Chalk Radio</a></span>.</p>
+<p><sup>*</sup><span style="font-size: smaller;">From <a href="https://chalk-radio.simplecast.com/episodes/opening-computer-science-to-everyone-with-chancellor-eric-grimson-Bpcx1tMI">MIT's Chalk Radio</a></span>.</p>
 
       <hr class="ending">
           <ul class="links-nextprev"><li><a href="/bite-sized-math-for-cs/prerequisites-and-resources/">next</a></li>
