deploy: 8028c9a84f0555bb6ed79b180523d3c3baaeecf5

--- a/index.html
+++ b/index.html
@@ -158,7 +158,7 @@
 <p>Let's start with some important points:</p>
 <ul>
 <li>
-<p><strong>This is a <a href="https://www.swyx.io/learn-in-public">learn in public</a> project</strong>, rather, experiment. That is, there is some chance that there might be mistakes. For feedback, feel free to contact <code>riveazero at gmail dot com</code>.</p>
+<p><strong>This is a <a href="https://www.swyx.io/learn-in-public">learn in public</a> project</strong>, rather, an experiment. That is, there is some chance that there might be mistakes. For feedback, feel free to contact <code>riveazero at gmail dot com</code>.</p>
 </li>
 <li>
 <p>The best way to learn something is to talk/write about it, or teach it to someone. This is the crux of the project: this collection consists mostly of very short notes <strong>written in an informal tone to get familiar with the concepts</strong>.</p>
@@ -173,7 +173,7 @@
 <p><strong>The main goal is to get familiar with the concepts rather than do a deep-dive exploration.</strong> That's why <strong>so many things are left off</strong>.</p>
 </li>
 <li>
-<p>When you read something like &quot;let's prove it,&quot; don't expect a rigorous mathematical proof. It is just a very, <em>very</em> informal way to convey the idea, the reasoning, of a proof that's given in the course or the coursebook.</p>
+<p>If you encounter a sentence like &quot;let's prove it,&quot; don't expect a rigorous mathematical proof. It is just a very, <em>very</em> informal way to convey the idea, the reasoning, of a proof that's given in the course or <a href="https://courses.csail.mit.edu/6.042/spring18/mcs.pdf">the coursebook</a>.</p>
 </li>
 <li>
 <p>Some of the examples are from the practice exercises in the course's relevant section; some of them are from other resources. Sometimes I provide a solution I came up with myself; sometimes it's from the lecture videos or the coursebook.</p>
@@ -204,7 +204,7 @@ Again, the point is to be as short as possible, only to explore concepts, so it 
 <hr>
 <h2>Some points on notation:</h2>
 <ul>
-<li>The coursebook and slides use the symbol <eq><span class="katex"><math xmlns="http://www.w3.org/1998/Math/MathML"><semantics><mrow><mo>:</mo><mo>:</mo><mo>=</mo></mrow><annotation encoding="application/x-tex">::=</annotation></semantics></math></span></eq> (as in <eq><span class="katex"><math xmlns="http://www.w3.org/1998/Math/MathML"><semantics><mrow><mi>x</mi><mo>:</mo><mo>:</mo><mo>=</mo><mi>y</mi></mrow><annotation encoding="application/x-tex">x ::= y</annotation></semantics></math></span></eq>, <eq><span class="katex"><math xmlns="http://www.w3.org/1998/Math/MathML"><semantics><mrow><mi>x</mi></mrow><annotation encoding="application/x-tex">x</annotation></semantics></math></span></eq> is assigned to <eq><span class="katex"><math xmlns="http://www.w3.org/1998/Math/MathML"><semantics><mrow><mi>y</mi></mrow><annotation encoding="application/x-tex">y</annotation></semantics></math></span></eq>). I used <eq><span class="katex"><math xmlns="http://www.w3.org/1998/Math/MathML"><semantics><mrow><mo>=</mo></mrow><annotation encoding="application/x-tex">=</annotation></semantics></math></span></eq> (the equal sign) for this.</li>
+<li>The coursebook and slides use the symbol <eq><span class="katex"><math xmlns="http://www.w3.org/1998/Math/MathML"><semantics><mrow><mo>:</mo><mo>:</mo><mo>=</mo></mrow><annotation encoding="application/x-tex">::=</annotation></semantics></math></span></eq> (as in <eq><span class="katex"><math xmlns="http://www.w3.org/1998/Math/MathML"><semantics><mrow><mi>x</mi><mo>:</mo><mo>:</mo><mo>=</mo><mi>y</mi></mrow><annotation encoding="application/x-tex">x ::= y</annotation></semantics></math></span></eq>, <eq><span class="katex"><math xmlns="http://www.w3.org/1998/Math/MathML"><semantics><mrow><mi>x</mi></mrow><annotation encoding="application/x-tex">x</annotation></semantics></math></span></eq> is defined to be <eq><span class="katex"><math xmlns="http://www.w3.org/1998/Math/MathML"><semantics><mrow><mi>y</mi></mrow><annotation encoding="application/x-tex">y</annotation></semantics></math></span></eq>). I used <eq><span class="katex"><math xmlns="http://www.w3.org/1998/Math/MathML"><semantics><mrow><mo>=</mo></mrow><annotation encoding="application/x-tex">=</annotation></semantics></math></span></eq> (the equal sign) for this.</li>
 <li>&quot;<strong>iff</strong>&quot; is the biconditional, a shorthand for &quot;if and only if&quot;, you can check out <a href="bite-sized-math-for-cs/unit-01-proofs/logic-and-propositions/">Logic and Propositions</a>, so it is not a grammatical mistake if you've not seen it before.</li>
 </ul>
 <hr>
